--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,19 +28,10 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
 
-    // ORMLite
-    compile 'com.j256.ormlite:ormlite-android:4.48'
-
-    // SugarORM
-    compile 'com.github.satyan:sugar:1.3.1'
-
-    // Couchlite
-    compile 'com.couchbase.lite:couchbase-lite-android:1.1.0'
-
-    // GreenDAO
-    compile('de.greenrobot:greendao:1.3.0') {
-        exclude module: 'support-v4'
-    }
+    compile 'com.j256.ormlite:ormlite-android:4.48' // ORMLite
+    compile 'com.github.satyan:sugar:1.3.1' // Sugar ORM
+    compile 'com.couchbase.lite:couchbase-lite-android:1.1.0' // Couchlite
+    compile 'org.greenrobot:greendao:2.2.0' // GreenDAO
 
     // utility functions
     compile 'org.apache.commons:commons-math3:3.3'
