--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
+apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "io.realm.datastorebenchmark"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -26,13 +27,16 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:24.0.0'
 
     compile 'com.j256.ormlite:ormlite-android:4.48' // ORMLite
-    compile 'com.github.satyan:sugar:1.3.1' // Sugar ORM
     compile 'com.couchbase.lite:couchbase-lite-android:1.1.0' // Couchlite
-    compile 'org.greenrobot:greendao:2.2.0' // GreenDAO
+    compile 'org.greenrobot:greendao:3.0.1' // GreenDAO
 
     // utility functions
     compile 'org.apache.commons:commons-math3:3.3'
+}
+
+greendao {
+    schemaVersion 1
 }
