--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'io.realm:realm-gradle-plugin:1.1.0'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.0.0'
     }
 }
 
