--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
-        classpath 'io.realm:realm-gradle-plugin:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'io.realm:realm-gradle-plugin:5.1.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.0.0'
     }
 }
@@ -12,5 +16,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
