--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'io.realm:realm-gradle-plugin:5.1.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.0.0'
     }
